--- a/BankManagementSys/ManageAccounts.xaml
+++ b/BankManagementSys/ManageAccounts.xaml
@@ -23,7 +23,7 @@
         <RadioButton Name="rbLastName" Content="Last Name" GroupName="CustSearch" HorizontalAlignment="Left" Margin="232,57,0,0" VerticalAlignment="Top"/>
 
         <TextBox Name="tbSearchCustBy" HorizontalAlignment="Left" Height="23" Margin="334,24,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="183"/>
-        <Button Click="btFind_Click" Name="btFind" Content="Find" HorizontalAlignment="Left" Margin="546,27,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button Click="btFind_Click" IsDefault="True" Name="btFind" Content="Find" HorizontalAlignment="Left" Margin="546,27,0,0" VerticalAlignment="Top" Width="75"/>
         <Button Content="Add" HorizontalAlignment="Left" Margin="260,367,0,0" VerticalAlignment="Top" Width="90" Height="37"/>
         <Button Content="Delete" HorizontalAlignment="Left" Margin="385,367,0,0" VerticalAlignment="Top" Width="90" Height="37"/>
         <Button Name="btBackToDash" Click="btBackToDash_Click"
