--- a/BankManagementSys/AddCustomer.xaml
+++ b/BankManagementSys/AddCustomer.xaml
@@ -24,23 +24,23 @@
         <Label Content="Province/State: *" HorizontalAlignment="Left" Margin="36,325,0,0" VerticalAlignment="Top" Grid.Row="1" Grid.RowSpan="2"/>
         <Label Content="Postal Code: *" HorizontalAlignment="Left" Margin="36,357,0,0" VerticalAlignment="Top" Grid.Row="1" Grid.RowSpan="2"/>
         <Label Content="Country: *" HorizontalAlignment="Left" Margin="36,387,0,0" VerticalAlignment="Top" Grid.Row="1" Grid.RowSpan="2"/>
-        <TextBox Name="tbFirstName" HorizontalAlignment="Left" Height="23" Margin="140,62,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="177" Grid.Row="1" Grid.RowSpan="2"/>
-        <TextBox Name="tbMiddleName" HorizontalAlignment="Left" Height="23" Margin="140,90,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="177" Grid.Row="1" Grid.RowSpan="2"/>
-        <TextBox Name="tbLastName" HorizontalAlignment="Left" Height="23" Margin="140,118,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="177" Grid.Row="1" Grid.RowSpan="2"/>
-        <TextBox Name="tbNatId" HorizontalAlignment="Left" Height="23" Margin="140,177,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="177" Grid.Row="1" Grid.RowSpan="2"/>
-        <DatePicker Name="dpBirthday" HorizontalAlignment="Left" Margin="140,208,0,0" VerticalAlignment="Top" Width="177" Grid.Row="1" Grid.RowSpan="2"/>
-        <TextBox Name="tbPhoneNo" HorizontalAlignment="Left" Height="23" Margin="140,240,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="177" Grid.Row="1" Grid.RowSpan="2"/>
-        <TextBox Name="tbAddress" HorizontalAlignment="Left" Height="23" Margin="140,271,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="177" Grid.Row="1" Grid.RowSpan="2"/>
-        <TextBox Name="tbCity" HorizontalAlignment="Left" Height="23" Margin="140,300,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="177" Grid.Row="1" Grid.RowSpan="2"/>
-        <TextBox Name="tbProvinceState" HorizontalAlignment="Left" Height="23" Margin="140,329,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="177" Grid.Row="1" Grid.RowSpan="2"/>
-        <TextBox Name="tbPostalCode" HorizontalAlignment="Left" Height="23" Margin="140,361,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="177" Grid.Row="1" Grid.RowSpan="2"/>
-        <RadioButton Name="rbGenderMale" GroupName="Gender" Content="Male" IsChecked="True" HorizontalAlignment="Left" Margin="140,151,0,0" VerticalAlignment="Top" Grid.Row="1" Grid.RowSpan="2"/>
-        <RadioButton Name="rbGenderFemale" GroupName="Gender" Content="Female" HorizontalAlignment="Left" Margin="196,151,0,0" VerticalAlignment="Top" Grid.Row="1" Grid.RowSpan="2"/>
-        <RadioButton Name="rbGenderOther" GroupName="Gender" Content="Other" HorizontalAlignment="Left" Margin="262,151,0,0" VerticalAlignment="Top" Grid.Row="1" Grid.RowSpan="2"/>
+        <TextBox Name="tbFirstName" HorizontalAlignment="Left" Height="23" Margin="217,62,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="177" Grid.Row="1" Grid.RowSpan="2"/>
+        <TextBox Name="tbMiddleName" HorizontalAlignment="Left" Height="23" Margin="217,90,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="177" Grid.Row="1" Grid.RowSpan="2"/>
+        <TextBox Name="tbLastName" HorizontalAlignment="Left" Height="23" Margin="217,118,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="177" Grid.Row="1" Grid.RowSpan="2"/>
+        <TextBox Name="tbNatId" HorizontalAlignment="Left" Height="23" Margin="217,177,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="177" Grid.Row="1" Grid.RowSpan="2"/>
+        <DatePicker Name="dpBirthday" HorizontalAlignment="Left" Margin="217,208,0,0" VerticalAlignment="Top" Width="177" Grid.Row="1" Grid.RowSpan="2"/>
+        <TextBox Name="tbPhoneNo" HorizontalAlignment="Left" Height="23" Margin="217,240,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="177" Grid.Row="1" Grid.RowSpan="2"/>
+        <TextBox Name="tbAddress" HorizontalAlignment="Left" Height="23" Margin="217,271,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="177" Grid.Row="1" Grid.RowSpan="2"/>
+        <TextBox Name="tbCity" HorizontalAlignment="Left" Height="23" Margin="217,300,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="177" Grid.Row="1" Grid.RowSpan="2"/>
+        <TextBox Name="tbProvinceState" HorizontalAlignment="Left" Height="23" Margin="217,329,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="177" Grid.Row="1" Grid.RowSpan="2"/>
+        <TextBox Name="tbPostalCode" HorizontalAlignment="Left" Height="23" Margin="217,361,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="177" Grid.Row="1" Grid.RowSpan="2"/>
+        <RadioButton Name="rbGenderMale" GroupName="Gender" Content="Male" IsChecked="True" HorizontalAlignment="Left" Margin="217,151,0,0" VerticalAlignment="Top" Grid.Row="1" Grid.RowSpan="2"/>
+        <RadioButton Name="rbGenderFemale" GroupName="Gender" Content="Female" HorizontalAlignment="Left" Margin="273,151,0,0" VerticalAlignment="Top" Grid.Row="1" Grid.RowSpan="2"/>
+        <RadioButton Name="rbGenderOther" GroupName="Gender" Content="Other" HorizontalAlignment="Left" Margin="339,151,0,0" VerticalAlignment="Top" Grid.Row="1" Grid.RowSpan="2"/>
         <Button Content="Cancel" IsCancel="True" HorizontalAlignment="Left" Margin="83,518,0,0" VerticalAlignment="Top" Width="75" Grid.Row="1" Grid.RowSpan="2"/>
         <Button Name="AddCust" Click="AddCust_Click" Content="Add" IsDefault="True" HorizontalAlignment="Left" Margin="191,519,0,0" VerticalAlignment="Top" Width="75" Grid.Row="1" Grid.RowSpan="2"/>
         <Label Content="* Fileds marked by asterisk are mandatory" HorizontalAlignment="Left" Margin="36,483,0,0" Grid.Row="2" VerticalAlignment="Top"/>
-        <ComboBox Name="comboCountry" HorizontalAlignment="Left" Margin="142,391,0,0" Grid.Row="2" VerticalAlignment="Top" Width="174" RenderTransformOrigin="0.5,0.5">
+        <ComboBox Name="comboCountry" HorizontalAlignment="Left" Margin="219,391,0,0" Grid.Row="2" VerticalAlignment="Top" Width="174" RenderTransformOrigin="0.5,0.5">
             <ComboBox.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -50,14 +50,14 @@
                 </TransformGroup>
             </ComboBox.RenderTransform>
         </ComboBox>
-        <RadioButton Name="rbCustCatIndividual" Content="Individual" GroupName="CustCategory" IsChecked="True" HorizontalAlignment="Left" Margin="181,10,0,0" Grid.Row="2" VerticalAlignment="Top"/>
-        <RadioButton Name="rbCustCatCompany" Content="Company" GroupName="CustCategory" HorizontalAlignment="Left" Margin="286,10,0,0" Grid.Row="2" VerticalAlignment="Top"/>
+        <RadioButton Checked="rbCustCatIndividual_Checked" Name="rbCustCatIndividual" Content="Individual" GroupName="CustCategory" IsChecked="True" HorizontalAlignment="Left" Margin="181,10,0,0" Grid.Row="2" VerticalAlignment="Top"/>
+        <RadioButton Checked="rbCustCatCompany_Checked" Name="rbCustCatCompany" Content="Company" GroupName="CustCategory" HorizontalAlignment="Left" Margin="286,10,0,0" Grid.Row="2" VerticalAlignment="Top"/>
         <Label Name="lblCompanyRep" Content="Company representative information" Visibility="Hidden" HorizontalAlignment="Left" Margin="36,32,0,0" VerticalAlignment="Top" Grid.Row="1" Grid.RowSpan="2"/>
         <Label Content="E-mail:" HorizontalAlignment="Left" Margin="36,417,0,0" VerticalAlignment="Top" Grid.Row="1" Grid.RowSpan="2"/>
-        <TextBox x:Name="tbEmail" HorizontalAlignment="Left" Height="23" Margin="140,420,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="177" Grid.Row="1" Grid.RowSpan="2"/>
+        <TextBox x:Name="tbEmail" HorizontalAlignment="Left" Height="23" Margin="217,420,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="177" Grid.Row="1" Grid.RowSpan="2"/>
         <Label Name="lblCompName" Content="" HorizontalAlignment="Left" Margin="36,446,0,0" VerticalAlignment="Top" Grid.Row="1" Grid.RowSpan="2"/>
-        <TextBox x:Name="tbCompanyName" Visibility="Hidden" HorizontalAlignment="Left" Height="23" Margin="140,450,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="177" Grid.Row="1" Grid.RowSpan="2"/>
+        <TextBox x:Name="tbCompanyName" Visibility="Hidden" HorizontalAlignment="Left" Height="23" Margin="217,449,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="177" Grid.Row="1" Grid.RowSpan="2"/>
 
-
+        
     </Grid>
 </Window>
