--- a/BankManagementSys/AddCustomer.xaml
+++ b/BankManagementSys/AddCustomer.xaml
@@ -39,7 +39,7 @@
         <RadioButton Name="rbGenderOther" GroupName="Gender" Content="Other" HorizontalAlignment="Left" Margin="339,151,0,0" VerticalAlignment="Top" Grid.Row="1" Grid.RowSpan="2"/>
         <Button Content="Cancel" IsCancel="True" HorizontalAlignment="Left" Margin="83,518,0,0" VerticalAlignment="Top" Width="75" Grid.Row="1" Grid.RowSpan="2"/>
         <Button Name="AddCust" Click="AddCust_Click" Content="Add" IsDefault="True" HorizontalAlignment="Left" Margin="191,519,0,0" VerticalAlignment="Top" Width="75" Grid.Row="1" Grid.RowSpan="2"/>
-        <Label Content="* Fileds marked by asterisk are mandatory" HorizontalAlignment="Left" Margin="36,483,0,0" Grid.Row="2" VerticalAlignment="Top"/>
+        <Label Content="* Mandatory fields" HorizontalAlignment="Left" Margin="36,483,0,0" Grid.Row="2" VerticalAlignment="Top"/>
         <ComboBox Name="comboCountry" HorizontalAlignment="Left" Margin="219,391,0,0" Grid.Row="2" VerticalAlignment="Top" Width="174" RenderTransformOrigin="0.5,0.5">
             <ComboBox.RenderTransform>
                 <TransformGroup>
