--- a/BankManagementSys/AddClientDialog.xaml
+++ b/BankManagementSys/AddClientDialog.xaml
@@ -6,27 +6,27 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BankManagementSys"
         mc:Ignorable="d"
-        Title="Add New Customer" Height="350" Width="600">
+        Title="Add New Customer" Height="350" Width="649">
     <Grid>
-        <xctk:Wizard Name="Wizard" FinishButtonClosesWindow="True" Next="Wizard_Next" HelpButtonVisibility="Hidden" CurrentPage="{Binding ElementName=Page3}" >
+        <xctk:Wizard Name="Wizard" FinishButtonClosesWindow="True" Next="Wizard_Next" Finish="Wizard_Finish" HelpButtonVisibility="Hidden" CurrentPage="{Binding ElementName=LastPage}" >
             <xctk:WizardPage x:Name="Page1" 
                                    Title="Add new customer"
                                    Description="Select type of cutomer">
                 <Grid>
-                    <RadioButton  Name="rbCustCatIndividual" Content="Individual" GroupName="CustCategory" IsChecked="True" HorizontalAlignment="Left" Margin="37,13,0,0" VerticalAlignment="Top"/>
-                    <RadioButton  Name="rbCustCatCompany" Content="Company" GroupName="CustCategory" HorizontalAlignment="Left" Margin="37,43,0,0" VerticalAlignment="Top"/>
+                    <RadioButton Checked="rbCustCatIndividual_Checked" Name="rbCustCatIndividual" Content="Individual" GroupName="CustCategory" IsChecked="True" HorizontalAlignment="Left" Margin="37,13,0,0" VerticalAlignment="Top"/>
+                    <RadioButton Checked="rbCustCatCompany_Checked"  Name="rbCustCatCompany" Content="Company" GroupName="CustCategory" HorizontalAlignment="Left" Margin="37,43,0,0" VerticalAlignment="Top"/>
                 </Grid>
             </xctk:WizardPage>
             <xctk:WizardPage x:Name="Page2" PageType="Interior"
                                    Title="Full name and Gender"
-                                   NextPage="{Binding ElementName=Page2 }"
-                                   PreviousPage="{Binding ElementName=IntroPage}">
+                                   NextPage="{Binding ElementName=Page3 }"
+                                   PreviousPage="{Binding ElementName=Page1}">
                 <Grid>
                     <Label Name="lblCompanyRep" Content="Company representative information" Visibility="Hidden" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
                     <Label Content="First Name: *" HorizontalAlignment="Left" Margin="36,52,0,0" VerticalAlignment="Top"/>
                     <Label Content="Middle Name:" HorizontalAlignment="Left" Margin="36,84,0,0" VerticalAlignment="Top"/>
                     <Label Content="Last Name: *" HorizontalAlignment="Left" Margin="36,115,0,0" VerticalAlignment="Top" Grid.Row="1" Grid.RowSpan="2"/>
-                    <Label x:Name="lblRequired" Content="* Fields marked with asterisk are required" Visibility="Visible" HorizontalAlignment="Left" Margin="331,164,0,0" VerticalAlignment="Top"/>
+                    <Label x:Name="lblRequired" Content="* Mandatory fields" Visibility="Visible" HorizontalAlignment="Left" Margin="481,161,0,0" VerticalAlignment="Top"/>
                     <TextBox Name="tbFirstName" HorizontalAlignment="Left" Height="23" Margin="148,57,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="177"/>
                     <TextBox Name="tbMiddleName" HorizontalAlignment="Left" Height="23" Margin="148,87,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="177"/>
                     <TextBox Name="tbLastName" HorizontalAlignment="Left" Height="23" Margin="148,118,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="177"/>
@@ -34,24 +34,82 @@
                     <RadioButton Name="rbGenderMale" GroupName="Gender" Content="Male" IsChecked="True" HorizontalAlignment="Left" Margin="430,70,0,0" VerticalAlignment="Top"/>
                     <RadioButton Name="rbGenderFemale" GroupName="Gender" Content="Female" HorizontalAlignment="Left" Margin="430,93,0,0" VerticalAlignment="Top"/>
                     <RadioButton Name="rbGenderOther" GroupName="Gender" Content="Other" HorizontalAlignment="Left" Margin="430,116,0,0" VerticalAlignment="Top"/>
+                    <Label Name="lblCompName" Visibility="Hidden" Content="Company Name: *" HorizontalAlignment="Left" Margin="36,147,0,0" VerticalAlignment="Top"/>
+                    <TextBox Name="tbCompanyName" Visibility="Hidden" HorizontalAlignment="Left" Height="23" Margin="148,150,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="177"/>
 
                 </Grid>
             </xctk:WizardPage>
-            <xctk:WizardPage x:Name="Page3" PageType="Interior"
+            <xctk:WizardPage  x:Name="Page3" PageType="Interior"
                                    Title="National Id and Date of Birth">
                 <Grid>
                     <Label Name="lblNatIdCompRegNo" Content="National ID: *" HorizontalAlignment="Left" Margin="36,41,0,0" VerticalAlignment="Top"/>
                     <Label Name="lblDateBirthOrRegist" Content="Date of Birth: *" HorizontalAlignment="Left" Margin="36,88,0,0" VerticalAlignment="Top"/>
-                    <Label Name="lblRequired1" Content="* Fields marked with asterisk are required" HorizontalAlignment="Left" Margin="324,161,0,0" VerticalAlignment="Top"/>
-                    <TextBox Name="tbNatId" HorizontalAlignment="Left" Height="23" Margin="168,43,0,0" Text="" VerticalAlignment="Top" Width="177"/>
-                    <DatePicker Name="dpBirthday" HorizontalAlignment="Left" Margin="168,88,0,0" VerticalAlignment="Top" Width="177"/>
+                    <Label Name="lblRequired1" Content="* Mandatory fields" HorizontalAlignment="Left" Margin="429,161,0,0" VerticalAlignment="Top"/>
+                    <TextBox Name="tbNatId" HorizontalAlignment="Left" Height="23" Margin="215,43,0,0" Text="" VerticalAlignment="Top" Width="177"/>
+                    <DatePicker Name="dpBirthday" HorizontalAlignment="Left" Margin="215,88,0,0" VerticalAlignment="Top" Width="177"/>
+                </Grid>
+            </xctk:WizardPage>
+            <xctk:WizardPage x:Name="Page4" PageType="Interior"
+                                   Title="Contact information">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="58*"/>
+                        <ColumnDefinition Width="15*"/>
+                        <ColumnDefinition Width="489*"/>
+                    </Grid.ColumnDefinitions>
+                    <Label Content="Phone No: *" HorizontalAlignment="Left" Margin="249,43,0,0" VerticalAlignment="Top" Grid.Column="2"/>
+                    <Label Content="Address: *" HorizontalAlignment="Left" Margin="11,11,0,0" VerticalAlignment="Top" Grid.ColumnSpan="3"/>
+                    <Label Content="City: *" HorizontalAlignment="Left" Margin="12,44,0,0" VerticalAlignment="Top"/>
+                    <Label Content="Province/State: *" HorizontalAlignment="Left" Margin="11,81,0,0" VerticalAlignment="Top" Grid.ColumnSpan="3"/>
+                    <Label Content="Postal Code: *" HorizontalAlignment="Left" Margin="11,115,0,0" VerticalAlignment="Top" Grid.ColumnSpan="3"/>
+                    <Label Content="Country: *" HorizontalAlignment="Left" Margin="11,149,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
+                    <Label Content="E-mail:" HorizontalAlignment="Left" Margin="249,77,0,0" VerticalAlignment="Top" Grid.Column="2"/>
+                    <TextBox x:Name="tbEmail" HorizontalAlignment="Left" Height="23" Margin="328,80,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="177" Grid.Column="2"/>
+                    <TextBox Name="tbPhoneNo" HorizontalAlignment="Left" Height="23" Margin="328,45,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="177" Grid.Column="2"/>
+                    <TextBox Name="tbAddress" HorizontalAlignment="Left" Height="23" Margin="39,12,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="177" Grid.Column="2"/>
+                    <TextBox Name="tbCity" HorizontalAlignment="Left" Height="23" Margin="39,46,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="177" Grid.Column="2"/>
+                    <TextBox Name="tbProvinceState" HorizontalAlignment="Left" Height="23" Margin="39,82,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="177" Grid.Column="2"/>
+                    <TextBox Name="tbPostalCode" HorizontalAlignment="Left" Height="23" Margin="39,117,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="177" Grid.Column="2"/>
+                    <ComboBox Name="comboCountry" HorizontalAlignment="Left" Margin="39,152,0,0" VerticalAlignment="Top" Width="174" RenderTransformOrigin="0.5,0.5" Grid.Column="2" />
+                    <Label Name="lblRequired3" Content="* Mandatory fields" Grid.Column="2" HorizontalAlignment="Left" Margin="407,162,0,0" VerticalAlignment="Top"/>
 
                 </Grid>
             </xctk:WizardPage>
-            <xctk:WizardPage x:Name="LastPage" PageType="Interior"
-                                   Title="Last Page"
-                                   Description="This is the last page in the process"
-                                   CanFinish="True"/>
+            <xctk:WizardPage x:Name="LastPage" PageType="Interior" 
+                                   Title="New customer summary"
+                                   CanFinish="True">
+                <Grid>
+                    <Label Content="First Name:" HorizontalAlignment="Left" Margin="10,23,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
+                    <Label Content="Middle Name:" HorizontalAlignment="Left" Margin="10,51,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
+                    <Label Content="Last Name:" HorizontalAlignment="Left" Margin="10,79,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
+                    <Label Content="Gender:" HorizontalAlignment="Left" Margin="11,106,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
+                    <Label Name="lblSummaryNatId" Content="National ID:" HorizontalAlignment="Left" Margin="11,162,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
+                    <Label Name="lblSummaryDateOfBirth" Content="Date of Birth:" HorizontalAlignment="Left" Margin="11,134,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
+                    <Label Content="Phone No:" HorizontalAlignment="Left" Margin="329,-2,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
+                    <Label Content="Address:" HorizontalAlignment="Left" Margin="329,50,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
+                    <Label Content="City:" HorizontalAlignment="Left" Margin="330,76,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
+                    <Label Content="Province/State:" HorizontalAlignment="Left" Margin="329,102,0,0" VerticalAlignment="Top" FontWeight="Bold" />
+                    <Label Content="Postal Code:" HorizontalAlignment="Left" Margin="329,134,0,0" VerticalAlignment="Top" FontWeight="Bold" />
+                    <Label Content="Country:" HorizontalAlignment="Left" Margin="329,164,0,0" VerticalAlignment="Top" FontWeight="Bold" />
+                    <Label Name="lblSummaryCompInfo" Content="Company Name:" HorizontalAlignment="Left" Margin="10,-2,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
+                    <Label Content="E-mail:" HorizontalAlignment="Left" Margin="330,24,0,0" VerticalAlignment="Top" FontWeight="Bold" />
+                    <Label Name="lblSumCompName" Content="-" HorizontalAlignment="Left" Margin="134,-2,0,0" VerticalAlignment="Top"/>
+                    <Label x:Name="lblSumFirstName" Content="-" HorizontalAlignment="Left" Margin="134,22,0,0" VerticalAlignment="Top"/>
+                    <Label x:Name="lblSumMidName" Content="-" HorizontalAlignment="Left" Margin="134,51,0,0" VerticalAlignment="Top"/>
+                    <Label x:Name="lblSumGender" Content="-" HorizontalAlignment="Left" Margin="134,107,0,0" VerticalAlignment="Top"/>
+                    <Label x:Name="lblSumDateOfBirth" Content="-" HorizontalAlignment="Left" Margin="134,134,0,0" VerticalAlignment="Top"/>
+                    <Label x:Name="lblSumNatId" Content="-" HorizontalAlignment="Left" Margin="134,163,0,0" VerticalAlignment="Top"/>
+                    <Label x:Name="lblSumPhoneNo" Content="-" HorizontalAlignment="Left" Margin="429,-2,0,0" VerticalAlignment="Top"/>
+                    <Label x:Name="lblSumEmail" Content="-" HorizontalAlignment="Left" Margin="429,24,0,0" VerticalAlignment="Top"/>
+                    <Label x:Name="lblSumAddress" Content="-" HorizontalAlignment="Left" Margin="429,49,0,0" VerticalAlignment="Top"/>
+                    <Label x:Name="lblSumCity" Content="-" HorizontalAlignment="Left" Margin="429,76,0,0" VerticalAlignment="Top"/>
+                    <Label x:Name="lblSumProvinceState" Content="-" HorizontalAlignment="Left" Margin="429,103,0,0" VerticalAlignment="Top"/>
+                    <Label x:Name="lblSumPostalCode" Content="-" HorizontalAlignment="Left" Margin="429,134,0,0" VerticalAlignment="Top"/>
+                    <Label x:Name="lblSumCountry" Content="-" HorizontalAlignment="Left" Margin="429,164,0,0" VerticalAlignment="Top"/>
+                    <Label x:Name="lblSumLastName" Content="-" HorizontalAlignment="Left" Margin="134,79,0,0" VerticalAlignment="Top"/>
+
+                </Grid>
+            </xctk:WizardPage>
         </xctk:Wizard>
     </Grid>
 </Window>
