--- a/BankManagementSys/GenerateStatement.xaml
+++ b/BankManagementSys/GenerateStatement.xaml
@@ -5,14 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BankManagementSys"
         mc:Ignorable="d"
-        Title="Generate Statement" Height="264.433" Width="215.464" ResizeMode="NoResize">
+        Title="Generate Statement" Height="199.433" Width="341.464" ResizeMode="NoResize">
     <Grid>
-        <Grid>
-            <Calendar HorizontalAlignment="Left" Margin="9,26,0,0" VerticalAlignment="Top" DisplayMode="Year" Width="183" Height="167"/>
-            <!--DisplayModeChanged="Calendar_DisplayModeChanged"-->
-            <Button Content="By Email" HorizontalAlignment="Left" Margin="9,198,0,0" VerticalAlignment="Top" Width="85" RenderTransformOrigin="0.853,0.65"/>
-            <Button Content="Print" HorizontalAlignment="Left" Margin="108,198,0,0" VerticalAlignment="Top" Width="84"/>
-            <Label Content="Please choose:" HorizontalAlignment="Left" Margin="54,0,0,0" VerticalAlignment="Top"/>
-        </Grid>
+        <ComboBox HorizontalAlignment="Left" Margin="20,21,0,0" VerticalAlignment="Top" Width="202"/>
+        <Button Content="By Email" HorizontalAlignment="Left" Margin="20,48,0,0" VerticalAlignment="Top" Width="64" RenderTransformOrigin="0.853,0.65"/>
+        <Button Content="Print" HorizontalAlignment="Left" Margin="89,48,0,0" VerticalAlignment="Top" Width="64"/>
+        <Button Content="Cancel" HorizontalAlignment="Left" Margin="158,48,0,0" VerticalAlignment="Top" Width="64"/>
     </Grid>
 </Window>
