--- a/BankManagementSys/ManageExistingCustomers.xaml
+++ b/BankManagementSys/ManageExistingCustomers.xaml
@@ -19,7 +19,7 @@
         </ListView>
         <Label Content="Search by" HorizontalAlignment="Left" Margin="35,21,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
         <TextBox Name="tbSearchCustBy" HorizontalAlignment="Left" Height="23" Margin="232,24,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="183"/>
-        <Button Click="btFind_Click" Name="btFind" Content="Find" HorizontalAlignment="Left" Margin="440,25,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button Click="btFind_Click" Name="btFind" IsDefault="True" Content="Find" HorizontalAlignment="Left" Margin="440,25,0,0" VerticalAlignment="Top" Width="75"/>
         <Button Click="btViewCustProfileClicked" Content="View/Update full customer profile" HorizontalAlignment="Left" Margin="218,290,0,0" VerticalAlignment="Top" Width="221" Height="37"/>
         <Label Content="" HorizontalAlignment="Left" Margin="737,47,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.316,0.654"/>
         <Label Content="" HorizontalAlignment="Left" Margin="708,76,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.316,0.654"/>
