added validation to make transfer and make payment(customer) added receipt for transfer and payment fixed null pointer exception in 'generate statement' when selecting time period added 'send receipt by email'and 'print receipt' for customer

--- a/BankManagementSys/GenerateStatement.xaml
+++ b/BankManagementSys/GenerateStatement.xaml
@@ -20,7 +20,7 @@
                 <GridView>
                     <GridViewColumn Header="Transaction Type" Width="160" DisplayMemberBinding="{Binding Type}"/>
                     <GridViewColumn Header="Date" Width="125" DisplayMemberBinding="{Binding Date, StringFormat=d}"/>
-                    <GridViewColumn Header="Amount" Width="135" DisplayMemberBinding="{Binding Amount, StringFormat=#.00}"/>
+                    <GridViewColumn Header="Amount" Width="135" DisplayMemberBinding="{Binding Amount, StringFormat=0.00}"/>
                 </GridView>
             </ListView.View>
         </ListView>
