--- a/CustomerUI/Receipt.xaml
+++ b/CustomerUI/Receipt.xaml
@@ -1,26 +1,23 @@
-﻿<Window x:Class="BankManagementSys.Receipt"
+﻿<Window x:Class="CustomerUI.Receipt"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:BankManagementSys"
+        xmlns:local="clr-namespace:CustomerUI"
         mc:Ignorable="d"
-        Title="Deposit" Height="690.175" Width="374" ResizeMode="NoResize" WindowStartupLocation="CenterOwner">
+        Title="Deposit" Height="670.175" Width="374" ResizeMode="NoResize" WindowStartupLocation="CenterOwner">
     <Grid>
         <Grid Margin="-2,1,2,-1">
-            <StackPanel Name="receiptPanel" Margin="0,0,0,84">
+            <StackPanel Name="receiptPanel" Margin="0,0,0,56">
                 <Label Content="Proof of transaction" HorizontalAlignment="Left" Margin="112,25,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="13"/>
                 <Label Content="Transaction type:" HorizontalAlignment="Left" Margin="36,12,0,0" VerticalAlignment="Top" Width="117"/>
                 <Label x:Name="lblTransType" Content="Deposit" HorizontalAlignment="Left" Margin="156,-25,0,0" VerticalAlignment="Top"/>
                 <Label Content="Account number:" HorizontalAlignment="Left" Margin="36,8,0,0" VerticalAlignment="Top"/>
                 <Label x:Name="lblAccNo" Content="..." HorizontalAlignment="Left" Margin="156,-27,0,0" VerticalAlignment="Top"/>
-                <Label Content="Account holder:" HorizontalAlignment="Left" Margin="36,7,0,0" VerticalAlignment="Top"/>
-                <Label x:Name="lblAccHolder" Content="..." HorizontalAlignment="Left" Margin="156,-27,0,0" VerticalAlignment="Top"/>
-                <Label Content="Transaction number:" HorizontalAlignment="Left" Margin="36,6,0,0" VerticalAlignment="Top"/>
+                <Label Content="Transaction number:" HorizontalAlignment="Left" Margin="36,8,0,0" VerticalAlignment="Top"/>
                 <Label Name="lblTransId" Content="..." HorizontalAlignment="Left" Margin="156,-27,0,0" VerticalAlignment="Top"/>
-                <Label Name="lblBenefAcc" Content="" HorizontalAlignment="Left" Margin="36,6,0,0" VerticalAlignment="Top"/>
-                <Label Name="lblBenefAccNo" Content="" HorizontalAlignment="Left" Margin="156,-26,0,0" VerticalAlignment="Top"/>
-
+                <Label Name="lblBenefAcc" Content="" HorizontalAlignment="Left" Margin="36,33,0,0" VerticalAlignment="Top"/>
+                <Label x:Name="lblBenefAccNo" Content="" HorizontalAlignment="Left" Margin="156,-26,0,0" VerticalAlignment="Top"/>
                 <Canvas HorizontalAlignment="Left" Height="183" Margin="23,131,0,0" VerticalAlignment="Top" Width="260">
                     <Line X1="10" Y1="-60" X2="250" Y2="-60" Stroke="Black" StrokeThickness="2" Canvas.Left="9" Canvas.Top="-42"/>
                     <Line X1="25" Y1="40" X2="25" Y2="150" StrokeDashArray="2 2" Stroke="Black" StrokeThickness="1" Canvas.Left="116" Canvas.Top="-125"/>
@@ -35,13 +32,12 @@
                 <Label x:Name="lblDate" Content="..." HorizontalAlignment="Left" Margin="210,-80,0,0" VerticalAlignment="Top"/>
                 <Label  Content="Receipt generated on:" HorizontalAlignment="Left" Margin="80,-50,0,0" VerticalAlignment="Top"/>
                 <Label x:Name="lblPrintDate" Content="..." HorizontalAlignment="Left" Margin="210,-50,0,0" VerticalAlignment="Top"/>
-                <Label  Content="Agent number:" HorizontalAlignment="Left" Margin="80,-110,0,0" VerticalAlignment="Top"/>
-                <Label x:Name="lblAgentNo" Content="..." HorizontalAlignment="Left" Margin="210,-110,0,0" VerticalAlignment="Top"/>
-
+                <Label Content="Account holder:" HorizontalAlignment="Left" Margin="36,-368,0,0" VerticalAlignment="Top"/>
+                <Label x:Name="lblAccHolder" Content="..." HorizontalAlignment="Left" Margin="156,-368,0,0" VerticalAlignment="Top"/>
             </StackPanel>
-            <Button Click="btSendByEmail_Click" Name="btSendByEmail" Content="Send by Email" HorizontalAlignment="Left" Margin="78,559,0,0" VerticalAlignment="Top" Width="94"/>
-            <Button Click="btPrint_Click" Name="btPrint" Content="Print" HorizontalAlignment="Left" Margin="191,559,0,0" VerticalAlignment="Top" Width="94"/>
-            <Button Name="btOk" Click="btOk_Click" IsDefault="True" Content="OK" HorizontalAlignment="Left" Margin="145,611,0,0" VerticalAlignment="Top" Width="75"/>
+            <Button Click="btSendByEmail_Click" Name="btSendByEmail" Content="Send by Email" HorizontalAlignment="Left" Margin="78,540,0,0" VerticalAlignment="Top" Width="94"/>
+            <Button Click="btPrint_Click" Name="btPrint" Content="Print" HorizontalAlignment="Left" Margin="191,540,0,0" VerticalAlignment="Top" Width="94"/>
+            <Button Name="btOk" Click="btOk_Click" IsDefault="True" Content="OK" HorizontalAlignment="Left" Margin="145,592,0,0" VerticalAlignment="Top" Width="75"/>
         </Grid>
 
     </Grid>
